Bug 485771 - Desktop icons disappear after icon update (including the trash icon)
Summary: Desktop icons disappear after icon update (including the trash icon)
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Containment (other bugs)
Version First Reported In: 6.0.4
Platform: Arch Linux Linux
: VHI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 485774 485811 486047 486110 486583 486674 488414 488415 488586 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-04-19 03:50 UTC by Holmes
Modified: 2024-07-27 04:16 UTC (History)
22 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: Frameworks 6.4
Sentry Crash Report:


Attachments
video (2.46 MB, video/mp4)
2024-05-15 01:38 UTC, timofej
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Holmes 2024-04-19 03:50:38 UTC
***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

SUMMARY
When a shortcut on the desktop gets a new icon or the icon is updated, the shortcut disappears completely. It won't be interactable until plasmashell is restarted.

For example, changing the icon of a shortcut will make it disappear. Also the Trash icon on the desktop also disappears when its icon got updated, like when emptying the trash.

STEPS TO REPRODUCE
1. Have a shortcut on the desktop or use the trash
2. Change the icon of the shortcut or empty the trash
3. The desktop icon is now gone and wont come back until plasmashell is restarted

OBSERVED RESULT
Desktop icons disappear

EXPECTED RESULT
Desktop icons should not disappear

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Arch Linux x86_64 6.8.7-arch1-1 
(available in About System)
KDE Plasma Version: Plasma 6.0.4 
KDE Frameworks Version: 6.1.0
Qt Version: 6.7.0

ADDITIONAL INFORMATION
Comment 1 medin 2024-04-19 23:49:48 UTC
I confirm the bug, it happens with updating any link to file, folder or application.
Comment 2 bestperson 2024-04-20 20:56:44 UTC
https://forum.manjaro.org/t/icons-on-the-main-desktop-disappear-when-editing/160180/3
The same story, and it was in 6.03 and 6.04
Comment 3 Max 2024-04-25 11:37:48 UTC
For me this happens on any edit of the shortcut not only icon change. The safe method of editing for now is to do it from dolphin (open desktop folder).

Operating System: Fedora Linux 40
KDE Plasma Version: 6.0.4
KDE Frameworks Version: 6.1.0
Qt Version: 6.7.0
Kernel Version: 6.8.7-300.fc40.x86_64 (64-bit)
Graphics Platform: Wayland
Comment 4 Holmes 2024-04-26 20:09:30 UTC
*** Bug 485774 has been marked as a duplicate of this bug. ***
Comment 5 Holmes 2024-04-26 20:10:54 UTC
Setting this to "CONFIRMED" since many users report having the same problem.
Comment 6 Holmes 2024-05-04 16:26:44 UTC
*** Bug 485811 has been marked as a duplicate of this bug. ***
Comment 7 Holmes 2024-05-04 16:30:52 UTC
*** Bug 486047 has been marked as a duplicate of this bug. ***
Comment 8 Holmes 2024-05-04 16:49:04 UTC
*** Bug 486583 has been marked as a duplicate of this bug. ***
Comment 9 Dmitry 2024-05-14 18:12:05 UTC
Can reproduce bug.

Operating System: openSUSE Tumbleweed 20240512
KDE Plasma Version: 6.0.4
KDE Frameworks Version: 6.2.0
Qt Version: 6.7.0
Kernel Version: 6.8.8-1-default (64-bit)
Graphics Platform: X11
Comment 10 David S 2024-05-14 21:27:42 UTC
Thought I was going nuts when my trash icon disappeared after emptying... Confirmed here on two machines. One fresh install of Plasma 6 and another upgraded from 5
Comment 11 timofej 2024-05-15 01:24:55 UTC
I confirm
Comment 12 timofej 2024-05-15 01:38:06 UTC
Created attachment 169490 [details]
video
Comment 13 Holmes 2024-05-17 10:44:37 UTC
(In reply to timofej from comment #12)
> Created attachment 169490 [details]
> video

Interesting that your trash icon disappears when you fill it. For me it's the other way. My trash icon disappears when I empty the trash.
Comment 14 Holmes 2024-05-26 13:07:18 UTC
Update: Bug still occurs in KDE Plasma version 6.0.5
Comment 15 Akseli Lahtinen 2024-05-28 09:25:35 UTC
*** Bug 486674 has been marked as a duplicate of this bug. ***
Comment 16 Bug Janitor Service 2024-05-28 09:44:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/1639
Comment 17 Akseli Lahtinen 2024-06-04 09:40:03 UTC
Git commit 0626185982687551523a6fe5cea4a1425e05a294 by Akseli Lahtinen.
Committed on 04/06/2024 at 09:40.
Pushed by akselmo into branch 'master'.

kfileitem.cpp: If fileMode is not unknown, set InitCalled to true in readUDSEntry

When modifying file properties, desktop view does not get the
m_bInitCalled as true and it thinks the desktop icon does not
exist anymore. 

This makes sure fileItem stays initialised when
calling readUdsEntry if the fileItem is not Unknown.

M  +5    -0    src/core/kfileitem.cpp

https://invent.kde.org/frameworks/kio/-/commit/0626185982687551523a6fe5cea4a1425e05a294
Comment 18 Sin Jeong-hun 2024-06-07 13:29:14 UTC
Version fixed in "6.4"? Is that correct?
Comment 19 Nate Graham 2024-06-07 14:01:00 UTC
Yes, it was fixed in Frameworks, so Frameworks 6.4
Comment 20 Nate Graham 2024-06-12 18:38:11 UTC
*** Bug 488414 has been marked as a duplicate of this bug. ***
Comment 21 Nate Graham 2024-06-12 18:38:35 UTC
*** Bug 488415 has been marked as a duplicate of this bug. ***
Comment 22 Nate Graham 2024-06-17 18:39:04 UTC
*** Bug 488586 has been marked as a duplicate of this bug. ***
Comment 23 Alexey 2024-06-22 17:15:47 UTC
Operating System: Fedora Linux 40
KDE Plasma Version: 6.1.0
KDE Frameworks Version: 6.3.0
Qt Version: 6.7.1
Kernel Version: 6.9.4-200.fc40.x86_64 (64-bit)
Graphics Platform: Wayland

Bug is still unfixed. To reproduce just
1. right click on *.desktop icon on the desktop
2. press OK button
Icon is disappears from Desktop although it is in the ~/Desktop folder.

To restore icon visibility I change room mode from folder to desktop and back.
Comment 24 Max 2024-06-22 20:38:39 UTC
(In reply to Alexey from comment #23)
> Operating System: Fedora Linux 40
> KDE Plasma Version: 6.1.0
> KDE Frameworks Version: 6.3.0
> Qt Version: 6.7.1
> Kernel Version: 6.9.4-200.fc40.x86_64 (64-bit)
> Graphics Platform: Wayland
> 
> Bug is still unfixed. To reproduce just
> 1. right click on *.desktop icon on the desktop
> 2. press OK button
> Icon is disappears from Desktop although it is in the ~/Desktop folder.
> 
> To restore icon visibility I change room mode from folder to desktop and
> back.

Please read carefully the above comments. Fixed in Frameworks 6.4, Fedora only has 6.3 now.
Comment 25 Nate Graham 2024-07-27 04:16:30 UTC
*** Bug 486110 has been marked as a duplicate of this bug. ***