kfileitem.cpp: If fileMode is not unknown, set InitCalled to true in readUDSEntry

When modifying file properties, desktop view does not get the
m_bInitCalled as true and it thinks the desktop icon does not
exist anymore. 

This makes sure fileItem stays initialised when
calling readUdsEntry if the fileItem is not Unknown.

BUG:485771